@@ -2,6 +2,7 @@ class: 'EBox::Squid'
 
 depends:
     - objects
+    - network
 
 enabledepends:
     - firewall
